# bitsafe

./: .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  UPGRADING.md  cliff.toml  release-please-config.json
.claude/commands/: feature.md  fix.md  upgrade-sdk.md
.claude/hooks/: security-stop-check.sh
.github/workflows/: ci.yml  flakehub.yml  release-please.yml  release.yml
contrib/: install.sh
contrib/launchd/: com.bitsafe.service.plist  com.grimoire.service.plist
contrib/systemd/: bitsafe-ssh-auth-sock.sh  bitsafe.service  grimoire-ssh-auth-sock.sh  grimoire.service
crates/bitsafe-cli/: Cargo.toml
crates/bitsafe-cli/src/: main.rs
crates/bitsafe-cli/src/commands/: mod.rs
crates/bitsafe-common/: Cargo.toml
crates/bitsafe-common/src/: config.rs  socket.rs
crates/bitsafe-prompt/: Cargo.toml
crates/bitsafe-prompt/src/: main.rs  pin.rs
crates/bitsafe-prompt/src/backend/: macos.rs  mod.rs  zenity.rs
crates/bitsafe-protocol/: Cargo.toml
crates/bitsafe-protocol/src/: request.rs  response.rs
crates/bitsafe-sdk/: Cargo.toml
crates/bitsafe-sdk/src/: auth.rs  crypto.rs  lib.rs  persist.rs  ssh.rs  state.rs
crates/bitsafe-service/: Cargo.toml
crates/bitsafe-service/src/: config.rs  main.rs  peer.rs  prompt.rs  server.rs  session.rs  ssh_agent.rs  state.rs  sync_worker.rs
crates/grimoire-cli/: Cargo.toml
crates/grimoire-cli/src/: main.rs
crates/grimoire-cli/src/commands/: clipboard.rs  credential_helper.rs  generate.rs  manifest.rs  mod.rs
crates/grimoire-common/: Cargo.toml
crates/grimoire-common/src/: config.rs  lib.rs  socket.rs
crates/grimoire-prompt/: Cargo.toml
crates/grimoire-prompt/src/: main.rs
crates/grimoire-prompt/src/backend/: macos.rs  mod.rs  terminal.rs  zenity.rs
crates/grimoire-protocol/: Cargo.toml
crates/grimoire-protocol/src/: codec.rs  event.rs  lib.rs  request.rs
crates/grimoire-sdk/: Cargo.toml
crates/grimoire-sdk/src/: auth.rs  cache.rs  error.rs  keystore.rs  lib.rs  persist.rs  ssh.rs  sync.rs  vault.rs
crates/grimoire-service/: Cargo.toml
crates/grimoire-service/src/: config.rs  main.rs  prompt.rs  server.rs  session.rs  ssh_agent.rs  state.rs  sync_worker.rs
docs/: architecture.md  development.md  future-features.md  install.md  lifecycle.md  quickstart.md  release.md  sdk-integration.md  secret-injection.md  security-report.md  security.md  ssh-agent.md
docs/tutorials/: 01-getting-started.md  02-ssh-agent.md  03-secret-injection.md  04-headless.md
native/linux/: Cargo.toml
native/linux/src/: main.rs
native/macos/: Package.swift
native/macos/Sources/: main.swift
nix/: module.nix
specs/: 001-architecture-overview.md  002-sdk-integration.md  003-ipc-protocol.md  004-service-design.md  005-client-designs.md  006-prompt-and-session.md  007-secret-injection.md  008-scoped-access.md  009-native-prompt-ui.md  010-rename-to-grimoire.md  011-release-pipeline.md  012-clipboard-auto-clear.md  013-password-generation.md  014-git-credential-helper.md  015-env-manifest.md  016-offline-support.md
