[package]
name = "bitsafe-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bitsafe"
path = "src/main.rs"

[dependencies]
bitsafe-protocol = { workspace = true }
bitsafe-common = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rpassword = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
