[package]
name = "bitsafe-prompt"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bitsafe-prompt"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rpassword = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
