[package]
name = "bitsafe-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
bitwarden-core = { workspace = true }
bitwarden-crypto = { workspace = true }
bitwarden-vault = { workspace = true }
bitwarden-pm = { workspace = true }
bitwarden-ssh = { workspace = true }
bitwarden-auth = { workspace = true }
bitwarden-sync = { workspace = true }
bitwarden-api-api = { git = "https://github.com/bitwarden/sdk-internal", rev = "9e3be8abbe71319620e964a90d79539bf9d19d9c" }
bitwarden-state = { git = "https://github.com/bitwarden/sdk-internal", rev = "9e3be8abbe71319620e964a90d79539bf9d19d9c" }
dirs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
async-trait = "0.1"
serde_urlencoded = "0.7"
ssh-key = { version = "0.7.0-rc.4", default-features = false, features = ["ed25519", "rsa"] }
ed25519-dalek = "2"
rsa = { version = ">=0.9.2, <0.10", features = ["sha2"] }
sha2 = ">=0.10.6, <0.11"
