[package]
name = "bitsafe-service"
version.workspace = true
edition.workspace = true

[dependencies]
bitsafe-sdk = { workspace = true }
bitsafe-protocol = { workspace = true }
bitsafe-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

ssh-agent-lib = "0.5"
async-trait = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
