[package]
name = "grimoire-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "grimoire"
path = "src/main.rs"

[dependencies]
grimoire-protocol = { workspace = true }
grimoire-common = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rpassword = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
