[package]
name = "bitsafe-prompt-linux"
version = "0.1.0"
edition = "2021"

# NOT part of the workspace — gtk4/libadwaita deps shouldn't pollute the main build

[[bin]]
name = "bitsafe-prompt-linux"
path = "src/main.rs"

[dependencies]
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_5"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
